Implemented Rate limitting using redis

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "url": "https://github.com/Adarsh-dwivedi/chatify/issues"
   },
   "homepage": "https://github.com/Adarsh-dwivedi/chatify#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "redis": "^5.10.0"
+  }
 }
