--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "redis": "^5.10.0",
     "resend": "^6.6.0"
   },
   "devDependencies": {
